--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./css/slick-theme.css">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/adaptive.css">
 </head>
 <body>
   <header class="header">
@@ -18,6 +19,11 @@
       <div class="container_contant">
         <div class="header_logo">
           <h1>jet<span>ro</span></h1>
+        </div>
+        <div class="burger_menu">
+          <div class="burger_menu_row"></div>
+          <div class="burger_menu_row"></div>
+          <div class="burger_menu_row"></div>
         </div>
         <nav class="menu">
           <ul>
