adaptive for all device

--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@
             <img src="./img/slider/small6.jpg" alt="">
           </div>
 
+          <div class="slider_item">
+            <img src="./img/slider/small4.jpg" alt="">
+          </div>
+
         </div>
       </div>
     </div>
