adaptive menu burger

--- a/index.html
+++ b/index.html
@@ -38,46 +38,46 @@
               </a>
             </li>
             <li class="menu_link drop_down">
-              <a >
+              <a href="#">
                 services
               </a>
               <ul class="drop_down_list">
                 <li>
-                  <a href="">Web Design</a> 
+                  <a href="#">Web Design</a> 
                   </li>
                 <li>
-                  <a href="">Wordpress Design</a> 
+                  <a href="#">Wordpress Design</a> 
                   </li>
                 <li>
-                  <a href="">Mobile App Devplopment</a> 
+                  <a href="#">Mobile App Devplopment</a> 
                 </li>
                 <li>
-                  <a href="">Internet Marketing</a> 
+                  <a href="#">Internet Marketing</a> 
                   </li>
                 <li>
-                  <a href="">Social Media Management</a> 
+                  <a href="#">Social Media Management</a> 
                   </li>
               </ul>
             </li>
             <li class="menu_link drop_down">
-              <a >
+              <a href="#" >
                 portfolio
               </a>
               <ul class="drop_down_list">
                 <li>
-                  <a href="">Web Design</a> 
+                  <a href="#">2</a> 
                   </li>
                 <li>
-                  <a href="">Wordpress Design</a> 
+                  <a href="#">2</a> 
                   </li>
                 <li>
-                  <a href="">Mobile App Devplopment</a> 
+                  <a href="#">2</a> 
                 </li>
                 <li>
-                  <a href="">Internet Marketing</a> 
+                  <a href="#">2</a> 
                   </li>
                 <li>
-                  <a href="">Social Media Management</a> 
+                  <a href="#">2</a> 
                   </li>
               </ul>
             </li>
