--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
               </a>
               <ul class="drop_down_list">
                 <li>
-                  <a href="#">2</a> 
+                  <a href="#">Empty</a> 
                   </li>
                 <li>
-                  <a href="#">2</a> 
+                  <a href="#">Empty</a> 
                   </li>
                 <li>
-                  <a href="#">2</a> 
+                  <a href="#">Empty</a> 
                 </li>
                 <li>
-                  <a href="#">2</a> 
+                  <a href="#">Empty</a> 
                   </li>
                 <li>
-                  <a href="#">2</a> 
+                  <a href="#">Empty</a> 
                   </li>
               </ul>
             </li>
