--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav class="menu">
           <ul>
             <li>
-              <a href="#" id="name">
+              <a href="/index.html" id="name">
                 home
               </a>
             </li>
@@ -61,7 +61,7 @@
             </li>
             <li class="menu_link drop_down">
               <a href="#" >
-                portfolio
+                submenu
               </a>
               <ul class="drop_down_list">
                 <li>
@@ -80,6 +80,11 @@
                   <a href="#">Empty</a> 
                   </li>
               </ul>
+            </li>
+            <li>
+              <a href="/portfolio.html">
+                portfolio
+              </a>
             </li>
             <li>
               <a href="#">
