--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav class="menu">
           <ul>
             <li>
-              <a href="/index.html" id="name">
+              <a href="./index.html" id="name">
                 home
               </a>
             </li>
