--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               </ul>
             </li>
             <li>
-              <a href="/portfolio.html">
+              <a href="./portfolio.html">
                 portfolio
               </a>
             </li>
